--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-fetch-hook": "^1.8.5",
+    "react-hook-form": "^7.27.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-webcam-qr-scanner": "^1.0.8",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
