--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-fetch-hook": "^1.8.5",
+    "react-ga": "^3.3.0",
     "react-hook-form": "^7.27.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.6",
