--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "mime-types": "^2.1.34",
     "react": "^17.0.1",
     "react-apple-pay-button": "^0.0.1-alpha.0",
