--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-fetch-hook": "^1.8.5",
     "react-ga": "^3.3.0",
     "react-hook-form": "^7.27.1",
+    "react-qr-code": "^2.0.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
