--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.3.15",
     "axios": "^0.26.0",
+    "crypto-js": "^4.1.1",
     "mime-types": "^2.1.34",
     "react": "^17.0.1",
     "react-apple-pay-button": "^0.0.1-alpha.0",
